2009-08-20 Magnus Hagdorn
 * src/python/fort_parser.py: fix the way python is called

2009-07-31 Magnus Hagdorn
 * configure.in: bump version to 1.0.19

2009-07-31 Magnus Hagdorn
 * configure.in: bump version to 1.0.18
 * NEWS: updated

2009-07-30 Magnus Hagdorn
 * merge trunk r900:1216

2009-04-24 Ian Rutt
 * Fixed bug in daily PDD scheme: model was cutting back pre-existing
   superimposed ice to wmax rather than just using this limit to constrain
   refreezing.
 * Added fix to allow global grids in GLINT with polar points - these are
   now moved automatically slightly away from the poles. This is necessary
   to avoid problems with mean-preserving interpolation

2009-02-25 Ian Rutt
 * Bump version to 1.0.17 (new development series)

2009-02-25 Ian Rutt
 * configure.in: bump version to 1.0.16
 * This release is skipped (i.e. not on website) - it only exists to make
   a fork for the development of Glimmer 2.0 (This is the 1.9.x branch)
 * NEWS: update

2009-02-25 Ian Rutt
 * Added additional subroutine for array allocation (3d integer)

2008-12-02 Ian Rutt
 * Bump version to 1.0.15 (new development series)
	
2008-12-02 Ian Rutt
 * configure.in: bump version to 1.0.14
 * NEWS: update
	
2008-12-02 Ian Rutt
 * Corrected index transposition in glide_temp.F90 (calcbpmp). Thanks to
 Jonathan Gregory for finding and fixing this.

2008-11-30 Ian Rutt
 * Changed all <config.inc> to "config.inc", to conform with
   strict requirements of gfortran 4.4.0

2008-11-23 Ian Rutt
 * Bump version to 1.0.13 (new development series)

2008-11-23 Ian Rutt
 * configure.in: bump version to 1.0.12
 * NEWS: update

2008-09-24 Ian Rutt
 * Fixed minor build bug in glide_thck.F90. Thanks to Christian Ferrer for
 identifying this one.

2008-07-23 Ian Rutt
 * Bump version to 1.0.11 (new development series)
	
2008-07-23 Ian Rutt
 * configure.in: bump version to 1.0.10
 * NEWS: update
	
2008-07-23 Ian Rutt
 * Changed basal temperature to be PMP if ice is floating

2008-07-08 Ian Rutt